Fix tracks are 'never played'

Order of collection was incorrect.
Tracks were found in the file track provider first instead of the
local collection.
Tracks of the type FileTrack usually don't have a collection.

BUG: 343956